# web_with_fastapi

./: .gitignore  README.md  api.py  pyproject.toml  requirements.txt
planner/: Dockerfile  docker-compose.yml  main.py  planner.db  requirements.txt
planner/auth/: authenticate.py  jwt_handler.py
planner/database/: connection.py
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
planner/tests/: conftest.py  test_arithmetic_operations.py  test_fixture.py  test_login.py  test_routes.py
todos/: api.py  model.py  todo.py
todos/templates/: home.html
