[tool.poetry]
name = "py-fastapi"
version = "0.1.0"
description = ""
authors = ["kmin1231 <kmin91143@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlmodel = "^0.0.22"
sqlalchemy = "^2.0.36"
beanie = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
